--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: '3.8'
-      - name: "Install style checker"
+      - name: "Install style checker black"
         run: pip install black
       - name: "Run style check"
         run: black --check .
